# Open-PhenoLiDAR

./: .gitignore  LICENSE  README.md  docker-compose-hardware.yml  docker-compose.yml
demo_data/: README.md
demo_data/bags/: get_sample_data.sh
docs/: 01-ROS_setup.md  02-MAVROS_Guide.md  03-Start-up_PX4_Autopilot.md
notebooks/: 01_Basic_HDF5_Processing.ipynb
src/agrolaser/: Dockerfile
src/agrolaser/agrolaser_node/: CMakeLists.txt  LICENSE  README.md  package.xml
src/agrolaser/agrolaser_node/Docker/: ros_entrypoint.sh
src/agrolaser/agrolaser_node/config/ekf/: ekf_localization.yaml
src/agrolaser/agrolaser_node/launch/: agrolaser_docker.launch  agrolaser_mavros.launch  px4_config.yaml  px4_pluginlists.yaml
src/agrolaser/agrolaser_node/msg/: ProjectInfo.msg  ProjectList.msg
src/agrolaser/agrolaser_node/rviz_cfg/: agrolaser.rviz  agrolaser_ekf.rviz
src/agrolaser/agrolaser_node/scripts/: laser_scan_assembler.py  lidar_pointcloud.py  lidar_recorder.py
src/agrolaser/agrolaser_node/srv/: ProjectService.srv
src/agrolaser/agrolaser_web/: CMakeLists.txt  Dockerfile  package.xml
src/agrolaser/agrolaser_web/src/app/: app.py  pointcloud_msg.py  requirements.txt
src/agrolaser/lms400_driver/: CMakeLists.txt  License.txt  package.xml
src/agrolaser/lms400_driver/include/lms400_driver/: sick_lms400.h
src/agrolaser/lms400_driver/launch/: sick_lms400.launch
src/agrolaser/lms400_driver/licenses/: third_party_licenses.txt
src/agrolaser/lms400_driver/rviz_cfg/: sick_lms400.rviz
src/agrolaser/lms400_driver/src/: sick_lms400.cpp  sick_lms400_node.cpp
