<?xml version="1.0"?>
<package format="2">
  <name>agrolaser_node</name>
  <version>0.0.1</version>
  <description>The agrolaser package is a ROS implementation for the LMS400
  LiDAR in Phenomics applications.</description>


  <maintainer email="berni@ias.csic.es">Jose A. Jimenez-Berni</maintainer>


  <license>MIT</license>


<url type="website">http://wiki.ros.org/agrolaser</url>


<author email="berni@ias.csic.es">Jose A. Jimenez-Berni</author>


  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>laser_assembler</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>laser_assembler</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>laser_assembler</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>mavros_extras</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>tf2_web_republisher</exec_depend>
  <exec_depend>tf2_sensor_msgs</exec_depend>
  <exec_depend>ros_numpy</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
